test/zinc_source/compile_errors/structs/04_unknown_composition_source.zn
// expected-error: unknown struct composition source 'Missing' in 'Item'

struct Base {
    path: string
}

struct Item [ Base, Missing ] {
}

fn main() {
    item = Item {
        path: "a"
    }
    print(item.path)
}
